compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__module_could_not_unify2.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 735
expression: "fn go() { 1 + 2.0 }"

---
error: Type mismatch
  ┌─ /src/one/two.gleam:1:15
  │
1 │ fn go() { 1 + 2.0 }
  │               ^^^

The + operator expects arguments of this type:

    Int

But this argument has this type:

    Float

Hint: the +. operator can be used with Floats



